--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -4,16 +4,3 @@
 
 @tailwind utilities;
 
-
-::-webkit-scrollbar {
-    width: 8px;
-}
- 
-::-webkit-scrollbar-track {
-    border-radius: 10px;
-}
- 
-::-webkit-scrollbar-thumb {
-    border-radius: 10px;
-    background-color: gray;
-}
